# lnschema-bionty

./: .gitignore  .pre-commit-config.yaml  README.md  lamin-project.yaml  manage.py  noxfile.py  pyproject.toml
.github/workflows/: build.yml
bionty/: __init__.py  _bionty.py  models.py
bionty/dev/: __init__.py  _settings.py
bionty/migrations/: 0001_initial.py  0001_initial_squashed_0016.py  0002_rename_gene_type_gene_biotype_and_more.py  0003_alter_biontysource_entity_alter_biontysource_source_and_more.py  0004_alter_cellline_bionty_source_and_more.py  0005_rename_short_name_cellline_abbr_and_more.py  0006_alter_biontysource_options_alter_cellline_options_and_more.py  0007_rename_readout_experimental_factor.py  0008_remove_gene_hgnc_id_remove_gene_mgi_id_and_more.py  0009_alter_gene_ensembl_gene_id.py  0010_alter_species_name.py  0011_cellline_datasets_cellmarker_datasets_and_more.py  0012_gene_stable_id.py  0013_alter_cellmarker_species_alter_gene_species_and_more.py  0014_ethnicity_developmentalstage.py  0015_migrate_to_integer_pks.py  0016_export_legacy_data.py  0017_import_legacy_data.py  0018_organism_rename_species_biontysource_organism_and_more.py  0019_rename_taxon_id_organism_ontology_id_and_more.py  0020_alter_organism_bionty_source.py  0021_rename_files_cellline_artifacts_and_more.py  0022_rename_datasets_cellline_collections_and_more.py  0023_rename_publicsource_encode_uid.py
django_lnschema_bionty/: asgi.py  settings.py  urls.py  wsgi.py
docs/: access-public-ontologies.ipynb  api.md  cell_line.ipynb  cell_marker.ipynb  cell_type.ipynb  changelog.md  developmental_stage.ipynb  disease.ipynb  ethnicity.ipynb  experimental_factor.ipynb  gene.ipynb  index.md  organism.ipynb  pathway.ipynb  phenotype.ipynb  protein.ipynb  reference.md  tissue.ipynb
docs/guide/: bionty-orms.ipynb  index.md  knowledge.ipynb  models.ipynb  orms.ipynb  tables.ipynb
docs/guides/: biolab.ipynb  bionty.ipynb  index.md  models.ipynb
docs/tutorials/: quickstart.ipynb
lndb_schema_biology/: __init__.py  _biolab.py  _bionty.py  biolab.py  bionty.py
lndb_schema_bionty/: __init__.py  _core.py
lnschema_bionty/: __init__.py  _bionty.py  _core.py  _id.py  _link.py  alembic.ini  apps.py  id.py  ids.py  link.py  manage.py  models.py
lnschema_bionty/core/: __init__.py  _add_ontology.py  _bionty.py  _settings.py
lnschema_bionty/dev/: __init__.py  _bionty.py  _bionty_versions.py  _id.py  _settings.py  _versions.py  id.py
lnschema_bionty/migrations/: 0001_initial.py  0001_initial_squashed_0016.py  (+37 more)
tests/: conftest.py  test_base.py  test_hash_id.py  test_integrity.py  test_migrations.py  test_notebooks.py  testdb.lndb
(+30 files in other folders)
