[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "lnschema_bionty"
authors = [{name = "Lamin Labs", email = "laminlabs@gmail.com"}]
readme = "README.md"
dynamic = ["version", "description"]
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
]
dependencies = [
    "lnschema_core>=0.54.0",
    "bionty==0.35.1",
]

[project.urls]
Home = "https://github.com/laminlabs/lnschema-bionty"

[project.optional-dependencies]
test = [
    "pre-commit",
    "nox",
    "requests",
    "pytest>=6.0",
    "pytest-cov",
    "nbproject-test",
    "lamindb-setup",
]

[tool.black]
preview = true

[tool.pytest.ini_options]
testpaths = [
    "tests",
]

[tool.coverage.run]
omit = [
    "lnschema_bionty/*",
]
